Expand system API contract
